# VINS-Mono

./: .gitignore
ar_demo/: CMakeLists.txt  package.xml
ar_demo/src/: ar_demo_node.cpp
benchmark_publisher/: CMakeLists.txt  package.xml
benchmark_publisher/src/: benchmark_publisher_node.cpp
camera_model/: CMakeLists.txt  package.xml
camera_model/src/: intrinsic_calib.cc
camera_model/src/calib/: CameraCalibration.cc
camera_model/src/camera_models/: Camera.cc  CameraFactory.cc  CataCamera.cc  CostFunctionFactory.cc  EquidistantCamera.cc  PinholeCamera.cc  ScaramuzzaCamera.cc
camera_model/src/chessboard/: Chessboard.cc
camera_model/src/gpl/: gpl.cc
config/3dm/: 3dm_config.yaml
config/black_box/: black_box_config.yaml
config/cla/: cla_config.yaml
config/euroc/: euroc_config.yaml  euroc_config_no_extrinsic.yaml
config/realsense/: realsense_color_config.yaml  realsense_fisheye_config.yaml
config/tum/: tum_config.yaml
docker/: bac.docker  docker-compose.yml
feature_tracker/: CMakeLists.txt
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h
pose_graph/: CMakeLists.txt  package.xml
pose_graph/src/: keyframe.cpp  keyframe.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
pose_graph/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  tic_toc.h
support_files/: brief_pattern.yml
vins_estimator/: CMakeLists.txt
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
(+36 files in other folders)
